Background image fix, header align and some style fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -799,6 +799,20 @@ main .section.small-vertical-margins {
     }
 }
 
+@media(max-width: 900px) {
+    .copd-treatment main .hero {
+        padding: 0;
+    }
+    
+    .copd-treatment main .hero div:first-of-type > div p {
+        margin: 0;
+    }
+    
+    main .hero > div:nth-of-type(n+2) > div h1 {
+        margin: 50px 0;
+    }
+}
+
 .copd-treatment .columns-row {
     position: relative;
     padding-bottom: 125px;
